<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS Spammer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="phoneNbHint">Phone number</string>
    <string name="messageHint">Message</string>
    <string name="startButtonLbl">Start</string>
    <string name="btnStopLbl">Stop</string>
    <string name="txtAnAppBy">github.com/tiphedor</string>
    <string name="ammountOfMessages">Ammount of message (0 = infinite)</string>
    <string name="errorFillAllFields">You must fill all fields.</string>

</resources>
